completed very basic authentication; only login

--- a/gui/credentials.yaml
+++ b/gui/credentials.yaml
@@ -1,21 +1,21 @@
-credentials:
-  usernames:
-    jasminex21:
-      email: jasminexu@utexas.edu
-      failed_login_attempts: 0 # Will be managed automatically
-      logged_in: False # Will be managed automatically
-      name: Jasmine Xu
-      password: Cassiusdio1$ # Will be hashed automatically
-    bart: 
-      email: jasminexu7003@icloud.com
-      failed_login_attempts: 0
-      logged_in: False
-      name: Bartholomew Papastathopoulos
-      password: Cassiusdio1$
 cookie:
   expiry_days: 30
-  key: cookiekey123 # Must be string
+  key: cookiekey123
   name: Internship Database Cookie Name
+credentials:
+  usernames:
+    bart:
+      email: jasminexu7003@icloud.com
+      failed_login_attempts: 0
+      logged_in: false
+      name: Bartholomew Papastathopoulos
+      password: $2b$12$y1.h4.pQK9mKmrfzcz4KiO/IxYAVqy6TxdLmCzmMZC26ssG4ikDOS
+    jasminex21:
+      email: jasminexu@utexas.edu
+      failed_login_attempts: 0
+      logged_in: false
+      name: Jasmine Xu
+      password: $2b$12$fDWchiz135d9yCwQ1VZNrOtumMnlw0XaaHo6tuVq4PQnTtC160U9m
 pre-authorized:
   emails:
   - jasminexu@utexas.edu
